# styles-web

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
src/: main.rs
src/views/: mod.rs
static/: robots.txt  site.webmanifest  sitemap.xml
static/.well-known/: security.txt
static/css/electric-eclipse/: dark.css  light.css  main.css
static/data/: README.md  person.json  website.json
static/js/: main.js  theme-init.js
